aruco tags | added tag number & border

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <input class="" value="20" type="text" id="marker-count"></input>
                 </div>
                 <label for="marker-random" class="pure-checkbox">
-                    <input id="marker-random" type="checkbox" value="" checked>
+                    <input id="marker-random" type="checkbox" value="">
                     random IDs
                 </label>
                 <div class="pure-control-group">
